--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Hostinger
 
 on:
   push:
-    branches: [main] # ou master, dependendo da sua branch principal
+    branches: [main]
 
 env:
   NEXT_PUBLIC_BASE_URL: ${{ secrets.NEXT_PUBLIC_BASE_URL }}
@@ -36,13 +36,3 @@ jobs:
           source: "out/*"
           target: ${{ secrets.HOSTINGER_DEPLOY_PATH }}
           strip_components: 1
-
-      - name: Restart PM2
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTINGER_HOST }}
-          username: ${{ secrets.HOSTINGER_USERNAME }}
-          key: ${{ secrets.HOSTINGER_SSH_KEY }}
-          script: |
-            cd ${{ secrets.HOSTINGER_DEPLOY_PATH }}
-            pm2 restart all || pm2 start npm --name "gcdigicont" -- start
