--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@next/third-parties": "^15.3.1",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
